--- a/artist.html
+++ b/artist.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lan="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/html5reset.css">
-  <link rel="stylesheet" href="css/mystyle.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mystyle.css">
   <title>Artist</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-      <li class="active"><a href = "index.html" >About Me</a></li>
+      <li><a href = "index.html" >About Me</a></li>
       <li><a href ="food.html">Food</a></li>
       <li><a href ="book.html">Book</a></li>
-      <li><a href="artist.html">Artist</a></li>
+      <li class="distinct_li" id="artist"><a href="artist.html">Artist</a></li>
       </ul>
     </nav>
     <h1>My Favorite Artists</h1>
@@ -24,11 +24,11 @@
 
   <main>
     <p>My Favorite Musician: Kings of convenience</p>
-    <img src="images/artist1.jpg" alt="Kings of convenience"/>
+    <img src="images/artist1.jpg" alt="Album cover of Kings of convenience, Declraition of Dependence"/>
     <p>An indie pop duo from Bergen, Norway, Kings of Convenience's gentle, harmony-rich songs recall the bittersweet comfort of forerunners like Simon & Garfunkel and Belle and Sebastian. After debuting in 2000 with the acoustic Kings of Convenience album, they topped the Norwegian album chart with the next year's Quiet Is the New Loud. The pair experimented with more-expansive arrangements over time while retaining a hushed demeanor on albums like 2004's Riot on an Empty Street, a Norwegian number two hit that cracked the Billboard Independent Albums chart in the U.S. After making their Billboard 200 debut with 2009's Declaration of Dependence, they took an extended publishing hiatus before returning in 2021 with Peace or Love.</p>
 
     <p> My Favorite Artist: Jean-Michel Basquiat (American artist)</p>
-    <img src="images/artist.jpg" alt="Basquiat"/>
+    <img src="images/artist.jpg" alt="One of his famous painting, Untitled and Portrait of Basquiat"/>
     <p>Jean-Michel Basquiat, (born December 22, 1960, Brooklyn, New York, U.S.—died August 12, 1988, New York City), American painter known for his raw gestural style of painting with graffiti-like images and scrawled text.</p>
     <p> More details...</p>
     <p>Jean-Michel Basquiat is best-known as the street-smart graffiti artist who rose from New York’s punk scene. He gained notoriety during the late 1970s as part of the graffiti duo known as SAMO, which combined elements of the hip-hop, punk, and street art movements in Downtown Manhattan. Less than a decade later, his neo-expressionist pieces were being exhibited in galleries and museums around the world. Basquiat’s paintings incorporated elements of poetry and other forms of writing, as his works often married images with text. With this style, he produced moving social commentary and critique on politics, racism, class struggle, and more.</p>
