--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lan="en">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/html5reset.css">
-  <link rel="stylesheet" href="css/mystyle.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mystyle.css">
   <title>About Me</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-      <li class="active"><a href = "index.html" >About Me</a></li>
+      <li class="distinct_li" id="index"><a href = "index.html" >About Me</a></li>
       <li><a href ="food.html">Food</a></li>
       <li><a href ="book.html">Book</a></li>
       <li><a href="artist.html">Artist</a></li>
@@ -26,16 +26,18 @@
 <p>Hello, my name is Hyeji Han. I would like to introduce my second hometown, San Francisco, CA. Here are ten of my favorite spots in San Francisco. 
   Why do I love San Francisco? It is not only because I used to live there, but also because San Francisco is unquestionably one of America's great cities. Everyone is familiar with world-famous landmarks such as the Golden Gate Bridge and the Powell Street cable cars, but this city has so much more to offer both tourists and locals.</p>
   <p>1. Alamo Square 2. Cable Car 3. Lombard Street 4. Cable cars in Downtown District 5. Sealions at pier 39 6. Alamo Square with sunset 7. Castro district with diverse culture 8. Mignificient Golden Gate Bridge 9. Palace of Fine Arts 10. Bay Bridge near pier 39</p>
-  <img src="images/sf1.jpg" alt="sf1"/>
-  <img src="images/sf2.jpg" alt="sf2"/>
-  <img src="images/sf3.jpg" alt="sf3"/>
-  <img src="images/sf4.jpg" alt="sf4"/>
-  <img src="images/sf5.jpg" alt="sf5"/>
-  <img src="images/sf6.jpg" alt="sf6"/>
-  <img src="images/sf7.jpg" alt="sf7"/>
-  <img src="images/sf8.jpg" alt="sf8"/>
-  <img src="images/sf9.jpg" alt="sf9"/>
-  <img src="images/sf10.jpg" alt="sf10">
+  <div class='indexs'>
+  <img src="images/sf1.jpg" class="index_pic" alt="Alamo Square, The Painted Ladies are located on Steiner Street, the street overlooking Alamo Square."/>
+  <img src="images/sf2.jpg" class="index_pic" alt="Cable cars running in San Francisco."/>
+  <img src="images/sf3.jpg" class="index_pic" alt="The Lombard street which is known for the one-way block on Russian."/>
+  <img src="images/sf4.jpg" class="index_pic" alt="Cable cars running in San Francisco Downtown."/>
+  <img src="images/sf5.jpg" class="index_pic" alt="Sealions at the pier39."/>
+  <img src="images/sf6.jpg" class="index_pic" alt="Alamo Square at sunset time with painted ladies."/>
+  <img src="images/sf7.jpg" class="index_pic" alt="San Francisco Castro district is an internationally recognized neighborhood that supports the LGBTQ."/>
+  <img src="images/sf8.jpg" class="index_pic" alt="Golden Gate Bridge at San Francisco."/>
+  <img src="images/sf9.jpg" class="index_pic"alt="The Palace of Fine Arts that is in the Marina District of San Francisco."/>
+  <img src="images/sf10.jpg" class="index_pic" alt="Bay bridge which is one of the longest spans in the United States.">
+  </div>
 </main>
 <footer>
   <p>Hyeji Han &copy; 2022</p>
