--- a/food.html
+++ b/food.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lan="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/html5reset.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mystyle.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Food</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-      <li><a href = "index.html" >About Me</a></li>
-      <li class="distinct_li" id="food"><a href ="food.html">Food</a></li>
+      <li class="active"><a href = "index.html" >About Me</a></li>
+      <li><a href ="food.html">Food</a></li>
       <li><a href ="book.html">Book</a></li>
       <li><a href="artist.html">Artist</a></li>
       </ul>
@@ -31,17 +31,18 @@
   <p>After a big meal, Are you ready with some dessert? This is Salt&Straw's ice creams. They have every classic flavor of ice cream which is handmade from locally sourced ingredients.</p>
   <p>Are you ready for a dinner? I would recommend Foreign Cinema that is a one-of-a-kind, nationally recognized restaurant that combines independent cinema with California-Mediterranean cuisine. </p>
   <p>Second restaurant that can be considered for dinner is Sotto Mare which is San Franciscos' Best Italian Seafood Restaurant. Highly recommend to try Crab Cioppino.</p>
-  <div class='foods'>
-    <img src="images/sf_restaurant8.jpg" class="food_pic" alt="The famous clam chowder"/>
-    <img src="images/sf_restaurant9.jpg" class="food_pic" alt="Dimsum and some Chinese cuisine"/>
-    <img src="images/sf_restaurant3.jpg" class="food_pic" alt="Brunch frech toast at Mama's on Washington Square"/>
-    <img src="images/sf_restaurant5.jpg" class="food_pic" alt="Innout burger with palm trees"/>
-    <img src="images/sf_restaurant6.jpg" class="food_pic" alt="Cheeseburgers with fries at Innout burger"/>
-    <img src="images/sf_restaurant7.jpg" class="food_pic" alt="Six cups of salt&straws ice creams"/>
-    <img src="images/sf_restaurant1.jpg" class="food_pic" alt="Interior of Foreign Cinema restaurant in San Francisco"/>
-    <img src="images/sf_restaurant4.jpg" class="food_pic" alt="One of the popular sea food dishes at Foreign Cinema"/>
-    <img src="images/sf_restaurant2.jpg" class="food_pic" alt="Crab Cioppino at Sotto Mare"/>
-  </div>
+  
+    <img src="images/sf_restaurant8.jpg" alt="restaurant 8"/>
+    <img src="images/sf_restaurant9.jpg" alt="restaurant 9"/>  
+    <img src="images/sf_restaurant3.jpg" alt="restaurant 3"/>
+    <img src="images/sf_restaurant5.jpg" alt="restaurant 5"/>
+    <img src="images/sf_restaurant6.jpg" alt="restaurant 6"/>
+    <img src="images/sf_restaurant7.jpg" alt="restaurant 7"/>
+    <img src="images/sf_restaurant8.jpg" alt="restaurant 8"/>
+    <img src="images/sf_restaurant9.jpg" alt="restaurant 9"/>
+    <img src="images/sf_restaurant1.jpg" alt="restaurant 1"/>
+    <img src="images/sf_restaurant4.jpg" alt="restaurant 4"/>
+    <img src="images/sf_restaurant2.jpg" alt="restaurant 2"/>
 
    </main>
   <footer>
