revert to old version

--- a/book.html
+++ b/book.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lan="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/html5reset.css">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mystyle.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Book</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-      <li><a href = "index.html" >About Me</a></li>
+      <li class="active"><a href = "index.html" >About Me</a></li>
       <li><a href ="food.html">Food</a></li>
-      <li class="distinct_li" id='book'><a href ="book.html">Book</a></li>
+      <li><a href ="book.html">Book</a></li>
       <li><a href="artist.html">Artist</a></li>
       </ul>
     </nav>
